--- a/content/pages/conferences/2017.md
+++ b/content/pages/conferences/2017.md
@@ -1,5 +1,10 @@
 ---
 title: TDWG 2017 annual conference
+summary: 
+cover_image: 
+cover_image_by: 
+cover_image_link: 
+tags: 
 page_order: 1
 divider: below
 ---
