Update metadata for posts + add sensible tags

--- a/_posts/2022-05-30-ebrii.md
+++ b/_posts/2022-05-30-ebrii.md
@@ -1,13 +1,11 @@
 ---
 title: Empowering Biodiversity Research II
-slug: EBRII
-date: 2022-05-30
-cover_image: https://static.tdwg.org/images/articles/2022/IMG_20220524_140053.jpg
-cover_image_by: Visotheary Ung
-cover_image_ref: Visotheary Ung
-tags: 
-status: published
+background:
+  img: https://static.tdwg.org/images/articles/2022/IMG_20220524_140053.jpg
+  by: Visotheary Ung
+tags: [outreach]
 ---
+
 # TDWG had a booth at the Empowering Biodiversity Research II conference in Tervuren
 
 The Belgian biodiversity Platform hosted their second [Biodiversity conference](https://www.biodiversity.be/4409) from 24-25 of May. 
